[project]
name = "opentdf-tests"
version = "2.0.0"
description = "Test suite for OpenTDF"
requires-python = ">=3.13"
dependencies = [
    "annotated-types",
    "certifi",
    "cffi",
    "charset-normalizer",
    "construct",
    "construct-typing",
    "cryptography",
    "gitpython",
    "idna",
    "iniconfig",
    "jsonschema",
    "packaging",
    "pluggy",
    "pycparser",
    "pydantic",
    "pydantic_core",
    "pyyaml>=6.0.2",
    "requests",
    "typing_extensions",
    "urllib3",
]

[dependency-groups]
dev = [
    "behave>=1.3.1",
    "black>=25.1.0",
    "pyright>=1.1.403",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
