[project]
name = "lmgmt"
version = "0.1.0"
description = "Local management CLI for OpenTDF test environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "ruamel.yaml>=0.18.0",
    "pydantic-settings>=2.2.0",
    "docker>=7.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
lmgmt = "lmgmt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmgmt"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
