[project]
name = "otdf-local"
version = "0.1.0"
description = "Local management CLI for OpenTDF test environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "otdf-sdk-mgr",
    "pydantic-settings>=2.14.1",
    "rich>=15.0.0",
    "ruamel.yaml>=0.18.0",
    "typer>=0.26.7",
]

[tool.uv.sources]
otdf-sdk-mgr = { path = "../otdf-sdk-mgr", editable = true }

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[project.scripts]
otdf-local = "otdf_local.cli:app"

[build-system]
requires = ["uv_build>=0.11.19"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = ["integration: marks tests requiring Docker and running services"]
