[project]
name = "otdf-local"
version = "0.1.0"
description = "Local management CLI for OpenTDF test environment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.14.2",
    "rich>=15.0.0",
    "ruamel.yaml>=0.18.0",
    "typer>=0.26.8",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[project.scripts]
otdf-local = "otdf_local.cli:app"

[build-system]
requires = ["uv_build>=0.11.19"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
markers = ["integration: marks tests requiring Docker and running services"]
