[project]
name = "otdf-sdk-mgr"
version = "0.1.0"
description = "SDK artifact management CLI for OpenTDF cross-client tests"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
]

[project.scripts]
otdf-sdk-mgr = "otdf_sdk_mgr.cli:app"

[build-system]
requires = ["uv_build>=0.9.28"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100
