[project]
name = "otdf-sdk-mgr"
version = "0.1.0"
description = "SDK artifact management CLI for OpenTDF cross-client tests"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.50",
    "pydantic>=2.6.0",
    "rich>=15.0.0",
    "ruamel.yaml>=0.18.0",
    "typer>=0.26.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]

[project.scripts]
otdf-sdk-mgr = "otdf_sdk_mgr.cli:app"

[build-system]
requires = ["uv_build>=0.11.18"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py311"
line-length = 100
