[project]
name = "xtest"
version = "0.1.0"
description = "OpenTDF cross-SDK integration test suite"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "BSD-3-Clause" }
authors = [{ name = "OpenTDF Team" }]
keywords = ["opentdf", "tdf", "testing", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "annotated-types>=0.7.0",
    "attrs>=25.4.0",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "construct>=2.10.70",
    "construct-typing>=0.7.0",
    "cryptography>=46.0.3",
    "gitdb>=4.0.12",
    "GitPython>=3.1.46",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "Jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "MarkupSafe>=3.0.3",
    "packaging>=25.0",
    "pluggy>=1.6.0",
    "pycparser>=2.23",
    "pydantic>=2.12.5",
    "pydantic_core>=2.41.5",
    "Pygments>=2.19.2",
    "pytest>=9.0.2",
    "pytest-html>=4.1.1",
    "pytest-xdist>=3.6.1",
    "pytest-metadata>=3.1.1",
    "referencing>=0.37.0",
    "requests>=2.32.5",
    "rpds-py>=0.30.0",
    "smmap>=5.0.2",
    "typing_extensions>=4.15.0",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.9.0",
]

# Note: This is a test suite, not a distributable package.
# Use `uv pip install -r pyproject.toml` or `uv sync` for dependencies.

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function calls in argument defaults
    "B011",   # assert False in test code is common pattern
]

[tool.ruff.lint.isort]
known-first-party = ["abac", "tdfs", "otdfctl", "assertions", "fixtures"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["."]
exclude = ["**/__pycache__", ".venv", ".ruff_cache", ".pytest_cache", "sdk", "tmp", "golden"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -v"
