[metadata]
# replace with your username:
name = attribute_provider
version = 0.0.1
author = Jeff Grady
author_email = jgrady@virtru.com
description = Web service delivering claims object to an IdP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/opentdf/backend
project_urls =
    Bug Tracker = https://github.com/opentdf/backend/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
